styles.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");

body {
  font-family: "Open Sans", sans-serif;
  background: #111;
  color: #fff;
  transition: color 0.5s, background 1s, margin-top 0.5s;
}

.--ignore-light-mode {
  color: #fff;
}

.website-background {
  z-index: -1;
  margin: 0;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  animation: unBlur 1s;
  filter: blur(0px);
}

.website-background-container {
  z-index: -1;
  margin: 0;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  animation: makeItBigger 1s;
  transition: background 1s;
  background-image: url("/assets/backgrounds/space.png");
  transform: scale(1.25);
}

@keyframes unBlur {
  0% {
    filter: blur(15px);
  }
  100% {
    filter: blur(0px);
  }
}

@keyframes makeItBigger {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(1.25);
  }
}

.topnav {
  overflow: visible;
  background: #333;
  border-radius: 100px;
  height: 50px;
  transition: background 0.5s;
}

.topnav-light {
  background: #ccc !important;
}

.topnavicon {
  height: 50px;
  float: left;
  -webkit-tap-highlight-color: transparent;
  transition: /* opacity 0.5s */ box-shadow 0.5s;
  border-radius: 100px;
  width: 50px;
  height: 50px;
  /*   border: none !important; */
}

/* .topnavicon:active {
  border: none !important;
} */

.button {
  color: white;
  padding: 16px 16px;
  text-decoration: none;
  background: #333;
  border-radius: 100px;
  transition: background 0.5s, box-shadow 0.5s, color 0.5s, border 0.5s,
    transform 0.5s;
  -webkit-tap-highlight-color: transparent;
  text-align: center;
  border: none;
  font-size: 1em;
  cursor: pointer;
}
.button:hover {
  background: #555;
  box-shadow: 0px 0px 25px #333;
  transform: scale(1.15);
  z-index: 10;
}
.button:active {
  /*  background: #777; */
  background: #fff;
  color: #000;
  box-shadow: 0px 0px 25px #888;
  /*   border: 5px solid white; */
  transform: scale(0.85);
}

.button-light {
  color: black !important;
  background: #ccc !important;
}
.button-light:hover {
  background: #aaa !important;
  box-shadow: 0px 0px 25px #888 !important;
}
.button-light:active {
  background: #000 !important;
  color: #fff !important;
  box-shadow: 0px 0px 50px #000 !important;
  /*   border: 5px solid black !important; */
}

.topnavtitle {
  float: left;
  position: relative;
  left: 5px;
  height: 100%;
  margin-left: 5px;
}

/* .topnavtitle:active {
  border: none !important;
} */

.container {
  background: #222;
  border-radius: 25px;
  transition: background 0.5s, color 0.5s;
  color: #fff;
}

.container-light {
  background: #ddd !important;
  color: #000;
}

.overlay {
  z-index: 10 !important;
  margin: 0;
  text-align: center;
  background-color: rgba(100, 100, 100, 0.5);
  width: 100%;
  height: 0%;
  display: block;
  position: fixed;
  /*   top: 0; */
  left: 0;
  right: 0;
  bottom: 0;
  transition: background 0.5s;
}

.overlay--light-mode {
  background-color: rgba(0, 0, 0, 0.5);
}

.overlay--show {
  opacity: 1;
  animation: getIn 1s;
  height: 100%;
  border-radius: 0px 0px 0px 0px;
}

.overlay--hide {
  opacity: 0;
  animation: getOut 1s;
  height: 0%;
  border-radius: 25px 25px 0px 0px;
}

@keyframes getIn {
  0% {
    opacity: 0;
    height: 0%;
    border-radius: 25px 25px 0px 0px;
  }
  50% {
    opacity: 1;
    height: 100%;
    border-radius: 25px 25px 0px 0px;
  }
  100% {
    opacity: 1;
    height: 100%;
    border-radius: 0px 0px 0px 0px;
  }
}

@keyframes getOut {
  0% {
    opacity: 1;
    height: 100%;
    border-radius: 0px 0px 0px 0px;
  }
  50% {
    opacity: 1;
    height: 100%;
    border-radius: 25px 25px 0px 0px;
  }
  100% {
    opacity: 0;
    height: 0%;
    border-radius: 25px 25px 0px 0px;
  }
}

